# WisprFlex

./: .gitmodules  CONTRIBUTING.md  LICENSE  PHASE0_EXECUTIVE_BRIEF.md  PHASE1_EXECUTION_BRIEF.md  PHASE2_EXECUTION_BRIEF.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  clarification.yml  config.yml  design_proposal.yml  performance_issue.yml
docs/: 00-overview.md  01-architecture.md  02-tech-decisions.md  03-product-scope-v1.md  04-agent-workflow.md  05-roadmap.md  PUBLIC_OVERVIEW.md  README.md
docs/phase-0/: DATA_FLOW.md  DEPENDENCY_AUDIT.md  KEEP_DROP_REWRITE.md  PERFORMANCE_BASELINE.md  RISKS_AND_CONSTRAINTS.md  SYSTEM_MAP.md
docs/phase-1/: ENGINE_API_SPEC.md  ENGINE_ARCHITECTURE.md  MODEL_MANAGEMENT_SPEC.md  README.md  STREAMING_STRATEGY.md
docs/phase-2/: README.md  validation-notes.md
docs/phase-2/phase-2.2/: BUILD_INSTRUCTIONS.md  README.md  benchmarks.md  transcription_validation.md
docs/phase-2/phase-2.3/: README.md  streaming_validation.md
docs/phase-2/phase-2.4/: README.md  performance_validation.md
docs/phase-2/phase-2.5/: CONTROL.md  stability_validation.md
docs/roles/: app-engineer.md  core-engineer.md  designer.md  product-owner.md  qa.md  tech-lead.md
engine/: README.md
engine/native/: CMakeLists.txt  transcript_output.txt
engine/native/include/: wisprflex_engine.h
engine/native/src/: engine.cpp  engine_state.h
engine/native/tests/: benchmark_model_load.cpp  engine_test.cpp  stability_test.cpp  streaming_test.cpp  streaming_test_real.cpp  transcription_test.cpp  whisper_smoke_test.cpp
engine/native/whisper_backend/: whisper_backend.cpp  whisper_backend.h
engine/node/: EngineController.js  errors.js  index.js  types.js
engine/node/__tests__/: EngineController.test.js  NativeBridge.test.js
engine/node/native-bridge/: AsyncNativeBridge.js  NativeWorker.js  ThreadSafeCallback.js  index.js
engine/tests/: phase2.1.test.js
wisprflex/: README.md
